src/test_fast_api/fast_api_deploy.yml

apiVersion: v1
kind: Service
metadata:
  name: fastapi
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: fastapi

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
  labels:
    app: fastapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
      - name: fastapi
        image: fiddlerbb/test_fast:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fastapi
            port:
              number: 80
